# pe

./: CMakeLists.txt  README.md  main.c  pe.h  tulainovd.ppm
calculatePoints/: points.c  points.h
circle/: circle.c  circle.h
drawCircle/: drawCircle.c  drawCircle.h
drawLine/: calculatePoints.c  drawLine.c  drawLine.h
drawTriangle/: drawTriangle.c  drawTriangle.h
lines/: lines.c  lines.h
pixel/: pixel.c  pixel.h
